# Space_Attackers

./: .gitattributes  .gitignore  .pre-commit-config.yml  BACKLOG.md  CLAUDE.md  README.md  Space_Attackers.spec  build.py  game_config.toml  highscores.json  log.txt  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml
docs/: Notes.md  arcade_spritelist_cycle_leak.md
docs/features/: BACKLOG.md  Staggered-Collision-Checks.md  background.md  boss-level.md  diving-ships.md  enemy_grid.md  framework-extraction.md  hit_points_and_health_bars.md  level-architecture-refactor.md  particles.md  player_ship.md  powerups.md  sa-metor-storm-levels.md  sa-powerups.md  score-popup.md  sound-manager-extraction.md  state_machine.md  text-and-hud.md
src/: __main__.py  background.py  boss_config.py  dive_controller.py  dive_path.py  diving_config.py  enemy_config.py  enemy_grid.py  game.py  game_config.py  game_event.py  meteor_config.py  music.py  particles_config.py  player_state.py  ship_config.py  sound_manager.py  state.py  ui_config.py
tests/: conftest.py  test_background.py  test_boss_level.py  test_dive_controller.py  test_dive_path.py  test_diving_ship.py  test_enemy_grid.py  test_explosion.py  test_game_config.py  test_high_scores.py  test_hud.py  test_level_factory.py  test_meteor_level.py  test_particles.py  test_player_bullet.py  test_player_ship.py  test_player_state.py  test_powerup_effects.py  test_sa_manager.py  test_sa_spawner.py  test_score_popup.py  test_spawn_safety.py  test_splash.py  test_state_machine.py
(+44 files in other folders)
