[project]
name = "space_attackers"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "arcade>=3.3.3,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

## Then install with `pip install -e ".[dev]"` to get everything including dev tools.

