[project]
name = "space_attackers"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "arcade>=3.3.3,<4.0",
    "arcade-game-framework @ git+https://github.com/darthwilliam1118/arcade-game-framework@v0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pyinstaller>=6.0",
    "ruff",
    "black"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # errors, pyflakes, warnings, isort

[tool.black]
line-length = 100

## Then install with `pip install -e ".[dev]"` to get everything including dev tools.

